--- a/index.html
+++ b/index.html
@@ -163,6 +163,12 @@ h1 {
     border-radius: 14px;
     margin-bottom: 15px;
 }
+.video-title {
+    font-size: 1.1rem;
+    font-weight: 600;
+    margin-bottom: 6px;
+}
+
 
         
         
