--- a/index.html
+++ b/index.html
@@ -172,6 +172,19 @@ h1 {
     display: none;
     margin-top: 25px;
 }
+.quality-btn {
+    width: 100%;
+    padding: 16px;
+    margin-bottom: 12px;
+    border-radius: 14px;
+    border: 1px solid var(--border);
+    background: rgba(0,0,0,0.5);
+    color: var(--primary);
+    font-weight: 600;
+    cursor: pointer;
+    transition: 0.25s;
+}
+
 
         
         
