Add hover effect to quality button

--- a/index.html
+++ b/index.html
@@ -184,6 +184,10 @@ h1 {
     cursor: pointer;
     transition: 0.25s;
 }
+.quality-btn:hover {
+    background: linear-gradient(135deg, var(--primary), var(--secondary));
+    color: #000;
+}
 
 
         
