--- a/index.html
+++ b/index.html
@@ -188,6 +188,11 @@ h1 {
     background: linear-gradient(135deg, var(--primary), var(--secondary));
     color: #000;
 }
+.quality-btn.best {
+    border-color: var(--primary);
+    box-shadow: 0 0 20px rgba(0,234,255,0.5);
+}
+
 
 
         
