--- a/index.html
+++ b/index.html
@@ -192,6 +192,15 @@ h1 {
     border-color: var(--primary);
     box-shadow: 0 0 20px rgba(0,234,255,0.5);
 }
+.warning {
+    margin-top: 30px;
+    background: rgba(255,193,7,0.15);
+    color: #ffd966;
+    padding: 15px;
+    border-radius: 14px;
+    font-size: 13px;
+    border: 1px solid rgba(255,193,7,0.4);
+}
 
 
 
