--- a/index.html
+++ b/index.html
@@ -202,7 +202,15 @@ h1 {
     border: 1px solid rgba(255,193,7,0.4);
 }
 
-
+.error {
+    margin-top: 20px;
+    background: rgba(220,53,69,0.15);
+    color: #ff9aa9;
+    padding: 14px;
+    border-radius: 14px;
+    font-size: 13px;
+    border: 1px solid rgba(220,53,69,0.4);
+}
 
         
         
